# genogrove

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  mkdocs.yml
.github/workflows/: cmake-multi-platform.yml
benchmark/: main.cpp
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  bindings.cpp
bindings/python/tests/: test_bindings.py
bindings/r/src/: bindings.cpp
cli/: CMakeLists.txt
cli/include/: BEDReader.hpp  BEDfileValidator.hpp  FileEntry.hpp  FileFormatValidator.hpp  FileReader.hpp  FileReaderFactory.hpp  FileTypeDetector.hpp  FileValidatorFactory.hpp  Index.hpp  Intersect.hpp  Overlap.hpp  Subcall.hpp  Utility.hpp
cli/src/: BEDReader.cpp  BEDfileValidator.cpp  FileTypeDetector.cpp  Index.cpp  Intersect.cpp  Overlap.cpp  Utility.cpp  main.cpp
cmake/: genogrove-config.cmake.in  tools.cmake
cpm/: CMakeLists.txt
docker/: gcc12-dev.Dockerfile  gcc13-dev.Dockerfile  gcc14-dev.Dockerfile
docs/source/: reference.rst
include/: Config.hpp.in  DataTypes.hpp  IBPTree.hpp  Interval.hpp  Key.hpp  Node.hpp  genogrove.hpp
include/genogrove/: AnyBase.hpp  AnyType.hpp  Chroms.hpp  DataFileValidator.hpp  DataTypes.hpp  Grove.hpp  Hits.hpp  IBPTree.hpp  Interval.hpp  Key.hpp  Node.hpp  TypeRegistry.hpp  TypedData.hpp  all.hpp
python/: CMakeLists.txt  ext.cpp
src/: Chroms.cpp  Grove.cpp  IBPTree.cpp  Interval.cpp  Key.cpp  Node.cpp  TypeRegistry.cpp  main.cpp
standalone/: CMakeLists.txt
standalone/genogrove/src/: main.cpp
tests/: IBPTreeTestSuite.cpp  Serialization.cpp  basic_test.cpp  cliTestSuite.cpp  generateBED.py  operations.cpp
tests/cli/: intersect.cpp
tests/lib/: IBPTreeTestSuite.cpp
